@@ -2045,7 +2045,8 @@ ACCMSGS=OFF
 #    CHANNELBACKLOGS, ANSIPROMPT, HYGIENE, SPECOMBATTHREAD, FOODROT,
 #    CHANNELAUCTION, LANGUAGES, COMBATSTATS, MQLCACHE, ITEMGENCACHE,
 #    DEATHCRY, DIS955RULE, RANDOMQUESTS, AUTOAWARDS, FATIGUE, 
-#    UNLEVELXP, UNLEVEL, NPCAUTOAWARDS
+#    UNLEVELXP, UNLEVEL, NPCAUTOAWARDS, CHARCRSTAT, CHARCRRACE,
+#    CHARCRCLASS, CHARCRGENDER
 #
 # The default value is COMMAND_POSE, which disables the pose command, 
 #    along with QUITREASON and RETIREREASON, which are useless.
