@@ -4748,7 +4748,9 @@ public class ListCmd extends StdCommand
 		GOVERNMENTS("GOVERNMENTS",new SecFlag[]{SecFlag.CMDCLANS}),
 		CLANS("CLANS",new SecFlag[]{SecFlag.CMDCLANS}),
 		DEBUGFLAG("DEBUGFLAG",new SecFlag[]{SecFlag.LISTADMIN}),
+		DEBUGFLAGS("DEBUGFLAGS",new SecFlag[]{SecFlag.LISTADMIN}),
 		DISABLEFLAG("DISABLEFLAG",new SecFlag[]{SecFlag.LISTADMIN}),
+		DISABLEFLAGS("DISABLEFLAGS",new SecFlag[]{SecFlag.LISTADMIN}),
 		ENABLEFLAG("ENABLEFLAG",new SecFlag[]{SecFlag.LISTADMIN}),
 		ALLQUALIFYS("ALLQUALIFYS",new SecFlag[]{SecFlag.CMDABILITIES,SecFlag.LISTADMIN}),
 		NEWS("NEWS",new SecFlag[]{SecFlag.LISTADMIN,SecFlag.JOURNALS,SecFlag.NEWS}),
@@ -6420,11 +6422,17 @@ public class ListCmd extends StdCommand
 		case CLANS:
 			s.wraplessPrintln(listClans(mob.session(), commands));
 			break;
+		case DEBUGFLAGS:
+			s.println("\n\r^xDebug Flags: ^?^.^N\n\r" + CMParms.toListString(new XVector<CMSecurity.DbgFlag>(CMSecurity.DbgFlag.values())) + "\n\r");
+			break;
 		case DEBUGFLAG:
 			s.println("\n\r^xDebug Settings: ^?^.^N\n\r" + CMParms.toListString(new XVector<CMSecurity.DbgFlag>(CMSecurity.getDebugEnum())) + "\n\r");
 			break;
 		case DISABLEFLAG:
 			s.println("\n\r^xDisable Settings: ^?^.^N\n\r" + CMParms.toListString(new XVector<Object>(CMSecurity.getDisablesEnum())) + "\n\r");
+			break;
+		case DISABLEFLAGS:
+			s.println("\n\r^Disable Flags: ^?^.^N\n\r" + CMParms.toListString(new XVector<CMSecurity.DisFlag>(CMSecurity.DisFlag.values())) + "\n\r");
 			break;
 		case ENABLEFLAG:
 			s.println("\n\r^xEnable Settings: ^?^.^N\n\r" + CMParms.toListString(new XVector<Object>(CMSecurity.getEnablesEnum())) + "\n\r");
