@@ -1213,11 +1213,23 @@ Lists all the debug flags that have been turned on in your system.  These flags 
 extra messaging to appear in your mud log (mud.log), assuming DBGMSGS has been appropriately \
 set in your coffeemud.ini file.
 
+LIST_DEBUGFLAGS=\
+Command  : LIST\n\r\
+Usage    : LIST DEBUGFLAGS\n\r\
+Example  : list debugflags\n\r\
+Lists all the available debug flags in your mud.
+
 LIST_DISABLEFLAG=\
 Command  : LIST\n\r\
 Usage    : LIST DISABLEFLAG\n\r\
 Example  : list disableflag\n\r\
 Lists all the disabled subsystems in your mud.
+
+LIST_DISABLEFLAGS=\
+Command  : LIST\n\r\
+Usage    : LIST DISABLEFLAGS\n\r\
+Example  : list disableflags\n\r\
+Lists all the available disable flags in your mud.
 
 LIST_ENABLEFLAG=\
 Command  : LIST\n\r\
