@@ -259,6 +259,7 @@ SERVLET/FileData=com.planet_ink.coffee_mud.Libraries.WebMacroCreamer
 SERVLET/ImageVerificationImage=com.planet_ink.coffee_mud.Libraries.WebMacroCreamer
 SERVLET/pub/SipletInterface=com.planet_ink.coffee_mud.Libraries.WebMacroCreamer
 SERVLET/SipletInterface=com.planet_ink.coffee_mud.Libraries.WebMacroCreamer
+SERVLET/WebSock=com.planet_ink.coffee_mud.Libraries.WebMacroCreamer
 SERVLET/pub/Unsubscribe=com.planet_ink.coffee_mud.Libraries.WebMacroCreamer
 SERVLET/Unsubscribe=com.planet_ink.coffee_mud.Libraries.WebMacroCreamer
 
