@@ -6,6 +6,8 @@
   4. ColorSet now supports Exits, as well as explored/unexplored doors.
   5. Mudborn kids get Prop_SafePet with auto-leiging and auto-follow
   6. New prompt features: %h% %m% and %v% for percentages .. breaks MXP bars
+  7. New disable flags: CHARCRSTAT, CHARCRRACE, CHARCRCLASS, CHARCRGENDER
+  8. New archon LISTs: DEBUGFLAGS, DISABLEFLAGS
   
 # Build 5.10.4 Release 12/05/2024
   *  DATABASE CHANGED! (Bitmap field in CMCHAR table is now larger)
